# galaxy-mcp

./: README.md
.github/workflows/: agent-tools-tests.yml
galaxy-agent-tools/: .dependency-cruiser.cjs  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
mcp-server-galaxy-py/: .pre-commit-config.yaml  pyproject.toml
mcp-server-galaxy-py/src/galaxy_mcp/: __init__.py  server.py
mcp-server-galaxy-py/tests/: test_helpers.py  test_page_operations.py  test_tool_tags.py  test_workflow_operations.py
